<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/strJoin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:text="TextView"
        tools:text="@string/strCreate" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="-61dp"
        android:ems="10"
        android:hint="@string/strFirstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="-62dp"
        android:ems="10"
        android:hint="@string/strLastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editCellPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editLastName"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/strCellPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editLastName"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="187dp"
        android:ems="10"
        android:hint="@string/strPassword"
        android:inputType="textPassword" />
</RelativeLayout>